<resources>
    <string name="app_name">Exam Builder</string>
    <string name="add_new_question">Add New Question</string>
    <string name="questions">Questions</string>
    <string name="user_info">User Information</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name_too_short">First name is too short</string>
    <string name="user_name_too_long">First name is too long</string>
    <string name="user_name_invalid_character">First name must only contain letters</string>
    <string name="user_surname_too_short">Last name is too short</string>
    <string name="user_surname_too_long">Last name is too long</string>
    <string name="user_surname_invalid_character">Last name must only contain letters</string>
    <string name="user_phone_number_invalid_phone_format">Invalid phone number</string>
    <string name="user_email_invalid_format">Invalid e-mail</string>
    <string name="user_invalid_password_format">Your password must be more than 8 characters long, should contain at-least 1 uppercase, 1 lowercase and 1 numeric character</string>
    <string name="user_password_repeat">Passwords do not match</string>
    <string name="user_created">User created</string>
    <string name="user_updated">User updated</string>
    <string name="login_successful">Login successful</string>
    <string name="user_already_exists">User already exists</string>
    <string name="email_already_exists">This email has already registered</string>
    <string name="user_image">User Image</string>
    <string name="question">Question</string>
    <string name="question_image">Question Image</string>
    <string name="answer">Answer :</string>
    <string name="show_answer">Show Answer</string>
    <string name="attachment">Attachment</string>
    <string name="attachment_type">Attachment Type:</string>
    <string name="question_saved">Question saved</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_question">Add Question</string>
    <string name="list_questions">List Questions</string>
    <string name="create_exam">Create Exam</string>
    <string name="log_out">Log Out</string>
    <string name="choices">Choices</string>
    <plurals name="login_failed_remaining_count">
        <item quantity="one">Login Failed. %d Trial Remain</item>
        <item quantity="other">Login Failed. %d Trials Remain</item>
    </plurals>
    <string name="login_blocked_first_time">Login Blocked. Try after a minute or create a new account</string>
    <plurals name="login_blocked_with_remaining_time">
        <item quantity="one">Login Blocked. Try after %d second</item>
        <item quantity="other">Login Blocked. Try after %d seconds</item>
    </plurals>
    <string name="add">Add</string>
    <string name="tree_dot">…</string>
    <string name="you_must_add_at_least_two_choices">You must add at least two choices</string>
    <string name="choices_cannot_be_empty">Choices cannot be empty</string>
    <string name="question_cannot_be_empty">Question cannot be empty</string>
    <string name="you_cant_change_this_question">You are not authorized to change this question</string>
    <string name="you_cant_delete_this_question">You are not authorized to delete this question</string>
    <string name="you_cant_change_this_exam">You are not authorized to change this exam</string>
    <string name="you_cant_delete_this_exam">You are not authorized to delete this exam</string>
    <string name="question_deleted">Question deleted</string>
    <string name="question_updated">Question updated</string>
    <string name="question_will_be_deleted">Delete Question</string>
    <string name="are_you_sure_question">This question will be permanently deleted.And removed from all exams.
        If exam has no question left then the exam will be deleted as well. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exam_settings">Exam settings</string>
    <string name="exam_settings_2">Exam Settings</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="select_question">Select\nQuestion</string>
    <string name="exam_code">Exam Code</string>
    <string name="exam_code_2">Exam\nCode</string>
    <string name="exam_time">Exam\nTime(min)</string>
    <string name="difficulty_level">Difficulty\nLevel</string>
    <string name="saved_exam">Saved\nExam</string>
    <string name="new_exam">New Exam</string>
    <string name="save_exam">Save\nExam</string>
    <string name="share_exam">Share\nExam</string>
    <string name="start_exam">Start\nExam</string>
    <string name="delete_exam">Delete\nExam</string>
    <string name="exam_saved">Exam Saved</string>
    <string name="exam_deleted">Exam Deleted</string>
    <string name="you_must_select_at_least_one_question">You must select at least one question</string>
    <string name="exam_code_cannot_be_empty">Exam code cannot be empty</string>
    <string name="this_exam_id_already_exists">This exam id already exists</string>
    <string name="exam_will_be_deleted">Delete Exam</string>
    <string name="are_you_sure_exam">This exam will be permanently deleted are you sure?</string>
    <string name="share_exam_as_file">Share exam as a file</string>
    <string name="share_exam_title">Share exam</string>
    <string name="answers">Answers</string>
    <string name="exam_updated">Exam Updated</string>
    <string name="no_attachment">None</string>
    <string name="select_a_type_first">Select a type first</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="select">Select</string>
    <string name="remaining_time">Time left:</string>
    <string name="finish_exam">Finish Exam</string>
    <string name="user">User:</string>
    <string name="congrats">Congratulations</string>
    <string name="you_have_completed"> You completed the exam.\n Here are the results.</string>
    <string name="correct_answer">Correct:</string>
    <string name="incorrect_answer">Incorrect:</string>
    <string name="unanswered">Unanswered:</string>
    <string name="grade">Grade:</string>
    <string name="settings_saved">Settings saved</string>
    <string name="dialog_image">Dialog image</string>
</resources>