<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/user_image"
                android:onClick="selectUserImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user_icon" />


            <TextView
                android:id="@+id/textView"
                style="@style/EditInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userImage" />

            <EditText
                android:id="@+id/userSignUpName"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="firstname"
                android:ems="10"
                android:hint="@string/enter_your_first_name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView11"
                style="@style/EditInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_last_name"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/userSignUpName" />

            <EditText
                android:id="@+id/userSignUpSurname"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="lastname"
                android:ems="10"
                android:hint="@string/enter_your_last_name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView3"
                style="@style/EditInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phone_number"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/userSignUpEMail" />

            <EditText
                android:id="@+id/userSignUpPhoneNumber"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView4"
                style="@style/EditInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_mail"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/userSignUpSurname" />

            <EditText
                android:id="@+id/userSignUpEMail"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                style="@style/EditInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/userSignUpPhoneNumber" />

            <EditText
                android:id="@+id/userSignUpPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                style="@style/EditInfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/userSignUpPassword" />

            <EditText
                android:id="@+id/userSignUpPasswordRe"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="signUp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userSignUpPasswordRe" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>

