<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".view.activity.MenuActivity">

    <Button
        style="@style/ImageAndTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addQuestion"
        android:text="@string/add_question"
        android:textAlignment="textStart"
        app:icon="@drawable/add"
        app:iconGravity="start"
        app:iconTint="@color/blue" />

    <Button
        style="@style/ImageAndTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listQuestions"
        android:text="@string/list_questions"
        android:textAlignment="textStart"
        app:icon="@drawable/list"
        app:iconGravity="start"
        app:iconTint="@color/pale_green" />

    <Button
        style="@style/ImageAndTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="examSettings"
        android:text="@string/exam_settings"
        android:textAlignment="textStart"
        app:icon="@drawable/settings"
        app:iconGravity="start"
        app:iconTint="@color/orange" />

    <Button
        style="@style/ImageAndTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createExam"
        android:text="@string/create_exam"
        android:textAlignment="textStart"
        app:icon="@drawable/edit"
        app:iconGravity="start"
        app:iconTint="@color/dark_green" />

    <Button
        style="@style/ImageAndTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="userInformation"
        android:text="@string/user_info"
        android:textAlignment="textStart"
        app:icon="@drawable/user_info"
        app:iconGravity="start"
        app:iconTint="@color/yellow" />

    <Button
        style="@style/ImageAndTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logOut"
        android:text="@string/log_out"
        android:textAlignment="textStart"
        app:icon="@drawable/logout"
        app:iconGravity="start"
        app:iconTint="@color/medium_green" />

</LinearLayout>